Closed
Bug 1144619
Opened 11 years ago
Closed 11 years ago
Variable 'nextX' is created in the wrong scope
Categories
(Core :: XUL, defect)
Core
XUL
Tracking
()
RESOLVED
FIXED
mozilla39
| Tracking | Status | |
|---|---|---|
| firefox39 | --- | fixed |
People
(Reporter: stephanichous, Assigned: stephanichous)
References
(Blocks 1 open bug)
Details
(Keywords: clang-analyzer, Whiteboard: [lang=cpp])
Attachments
(1 file, 3 obsolete files)
|
2.53 KB,
patch
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux i686; rv:36.0) Gecko/20100101 Firefox/36.0
Build ID: 20150306140126
Steps to reproduce:
Location: line 297, column 13
Value stored to 'nextY' during its initialization is never read
| Assignee | ||
Updated•11 years ago
|
Mentor: mh+mozilla
Flags: a11y-review?
OS: Linux → All
Hardware: x86 → All
Whiteboard: [lang=c++]
| Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed
| Assignee | ||
Updated•11 years ago
|
Mentor: dbaron
| Assignee | ||
Updated•11 years ago
|
Attachment #8579295 -
Flags: review?(dbaron)
| Assignee | ||
Updated•11 years ago
|
Flags: a11y-review?
| Assignee | ||
Updated•11 years ago
|
Whiteboard: [lang=c++] → [lang=cpp]
| Assignee | ||
Updated•11 years ago
|
Mentor: dbaron, mh+mozilla
Comment on attachment 8579295 [details] [diff] [review]
patch.diff
Please don't mix whitespace changes that reformat the whole file with substantive changes.
(I'd be ok with a patch to remove trailing whitespace, but as a separate patch.)
Attachment #8579295 -
Flags: review?(dbaron) → review-
Updated•11 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 2•11 years ago
|
||
OK. I put on this diff only the main modification that I made on this file (not the trailing space).
Attachment #8579295 -
Attachment is obsolete: true
Attachment #8579407 -
Flags: review?(dbaron)
Comment on attachment 8579407 [details] [diff] [review]
patch.diff
Did you also mean to remove the assignments to nextX and nextY in between these two changes? (Without that removal it wouldn't compile.)
Attachment #8579407 -
Flags: review?(dbaron) → review-
| Assignee | ||
Comment 4•11 years ago
|
||
Sorry, I totaly forgot to remove the assignments that were before the new declaration. I fix it.
Attachment #8579407 -
Attachment is obsolete: true
Attachment #8579567 -
Flags: review?(dbaron)
Attachment #8579567 -
Flags: review?(dbaron) → review+
If you follow the instructions at:
https://developer.mozilla.org/en-US/docs/Mercurial_FAQ#How_can_I_generate_a_patch_for_somebody_else_to_check-in_for_me.3F
you can upload a revised patch and add the checkin-needed keyword.
| Assignee | ||
Comment 6•11 years ago
|
||
I upload the revised patch as expected.
Attachment #8579567 -
Attachment is obsolete: true
| Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed
Comment 7•11 years ago
|
||
Assignee: nobody → stephanichous
Keywords: checkin-needed
Comment 8•11 years ago
|
||
Status: UNCONFIRMED → RESOLVED
Closed: 11 years ago
status-firefox39:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Updated•11 years ago
|
Keywords: clang-analyzer
Updated•11 years ago
|
Blocks: clang-based-analysis
You need to log in
before you can comment on or make changes to this bug.
Description
•