Bug 1144619 - Variable 'nextX' is created in the wrong scope. r=dbaron